# dmlUtgard

./: --output  .gitattributes  .gitignore  Procfile  README.md  cheatsheet.md  db.sqlite3  dev.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  winreqs.txt  workplan.md
dmlutgard/: production_settings.py  settings.py  storages_custom.py  testrunners.py  tests.py  urls.py  wsgi.py
main/: tests.py  urls.py  views.py
server/: djangoplugin.py  httplogger.py  server.py  server0.py
src/: Procfile  db.sqlite3  manage.py  server1.py
src/dmlUtgard/: production_settings.py  settings.py  storages_custom.py  urls.py  wsgi.py
src/main/: homepage.html_flat.html  urls.py  views.py
src/server/: server.py  server0.py  server1.py  wsgi.py
src/static/CSS/: 3d_atom2.css  3d_utgard.css  3d_utgard1.css  base.css
src/static/SCSS/: 3d_utgard.scss
src/templates/: ULogo.html  animated_atoms.html  base.html
src/templates/main/: facilities.html  homepage.html  projects.html
static/CSS/: distinctive_slides.css
static/SCSS/: 3d_utgard2.scss
static_cdn/CACHE/: manifest.json
static_cdn/CACHE/css/: 01353bba23f7.css  03c641b89c56.css  16000f680e08.css  1fc4980f2106.css  (+17 more)
static_cdn/CSS/: 3d_atom.css  3d_utgard1.css  distinctive_slides.css
static_cdn/img/: Utgard_logo.tif
templates/: ULogo.html  animated_atoms.html  base.html
templates/distinctive/: _slideTitle.html  _slides_base.html  slide2.html  slide3.html  slide5.html
templates/main/: contact.html  homepage.html  projects.html
templates_cdn/: facilities_flat.html  homepage_flat.html
(+5 files in other folders)
